# aurobot

./: README.md
aurobot_barrett_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aurobot_control/: CMakeLists.txt  package.xml
aurobot_control/config/: aurobot_controllers.yaml  aurobot_left_controllers.yaml
aurobot_control/launch/: aurobot_control.launch
aurobot_description/: CMakeLists.txt  package.xml
aurobot_description/gazebo/: gazebo.urdf.xacro
aurobot_description/meshes/base/: base_down.stl
aurobot_description/meshes/bearing/: bearing_above.stl  bearing_under.stl
aurobot_description/meshes/coupling/: coupling_pa10.stl  coupling_robotiq.stl
aurobot_description/meshes/forearm/: W2.stl  forearm.blend
aurobot_description/meshes/hand/allegro/: base_link.0.STL
aurobot_description/meshes/pa10-blue/forearm/: W2.mlp  jr3.dae  jr3.stl
aurobot_description/meshes/pa10-blue/upper_arm/: E1.dae  E1.mlp  E2.dae  E2.stl
aurobot_description/meshes/pa10-green/forearm/: W1.dae  W1.mlp  W2.dae  pa10_05.stl  pa10_06.stl
aurobot_description/meshes/pa10-green/shoulder/: S1.dae  S2.dae  S2.mlp  S3.dae  S3.stl  pa10_00.stl  pa10_01.stl  pa10_02.stl  shoulder.blend
aurobot_description/meshes/pa10-green/upper_arm/: pa10_03.stl  pa10_04.stl  upper_arm.blend
aurobot_description/meshes/robot-base/base/: base.mlp~  base_up.stl
aurobot_description/meshes/robot-base/profiles/: profiles.stl
aurobot_description/meshes/shoulder/: S1.mlp  S1.stl  S3.mlp
aurobot_description/meshes/trunk/: trunk.stl
aurobot_description/meshes/upper_arm/: E2.mlp
aurobot_description/robots/: aurobot.urdf.xacro  aurobot_barrett.urdf.xacro  aurobot_kinect.urdf.xacro  aurobot_left.urdf.xacro  aurobot_right.urdf.xacro  aurobot_right_robotiq.urdf.xacro  aurobot_right_shadow.urdf.xacro  aurobot_shadow.urdf.xacro  aurobot_shadow.urdf.xacro (copy)  pa10.urdf.xacro
aurobot_description/urdf/: common.xacro  materials.urdf.xacro
aurobot_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro
aurobot_description/urdf/bearing/: bearing.gazebo.xacro  bearing.urdf.xacro
aurobot_description/urdf/forearm/: forearm.gazebo.xacro  forearm.transmission.xacro  forearm.urdf.xacro
aurobot_description/urdf/hand/allegro/: allegro_left.transmission.xacro  allegro_left.urdf (copy).xacro  allegro_left.urdf.xacro
aurobot_description/urdf/hand/robotiq/: robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro
aurobot_description/urdf/pa10-blue/forearm/: forearm.gazebo.xacro  forearm.transmission.xacro  forearm.urdf.xacro
aurobot_description/urdf/pa10-blue/shoulder/: shoulder.gazebo.xacro  shoulder.transmission.xacro  shoulder.urdf.xacro
aurobot_description/urdf/pa10-blue/upper_arm/: upper_arm.gazebo.xacro  upper_arm.transmission.xacro  upper_arm.urdf.xacro
aurobot_description/urdf/pa10-green/forearm/: forearm.gazebo.xacro  forearm.transmission.xacro  forearm.urdf (copy).xacro  forearm.urdf.xacro  forearm.urdf.xacro-oldmodel  forearm.urdf.xacro-sinorigin
aurobot_description/urdf/pa10-green/shoulder/: shoulder.gazebo.xacro  shoulder.transmission.xacro  shoulder.urdf (copy).xacro  shoulder.urdf.xacro  shoulder.urdf.xacro-bestcoupled  shoulder.urdf.xacro-oldmodel  shoulder.urdf.xacro-sinorigin
aurobot_description/urdf/pa10-green/upper_arm/: upper_arm.gazebo.xacro  upper_arm.transmission.xacro  upper_arm.urdf.xacro  upper_arm.urdf.xacro-bestcoupled  upper_arm.urdf.xacro-oldmodel  upper_arm.urdf.xacro-sinorigin
aurobot_description/urdf/profiles/: profiles.gazebo.xacro  profiles.urdf.xacro
aurobot_description/urdf/robot-base/base/: base.urdf.xacro
aurobot_description/urdf/robot-base/bearing/: bearing.urdf.xacro
aurobot_description/urdf/robot-base/profiles/: profiles.urdf.xacro
aurobot_description/urdf/robot-base/trunk/: trunk.urdf.xacro
aurobot_description/urdf/sensors/: kinect_camera.gazebo.xacro  kinect_camera.urdf.xacro
aurobot_description/urdf/shoulder/: shoulder.gazebo.xacro  shoulder.transmission.xacro  shoulder.urdf.xacro
aurobot_description/urdf/trunk/: trunk.gazebo.xacro  trunk.urdf.xacro
aurobot_description/urdf/upper_arm/: upper_arm.gazebo.xacro  upper_arm.transmission.xacro  upper_arm.urdf.xacro
aurobot_gazebo/: CMakeLists.txt  package.xml
aurobot_gazebo/launch/: aurobot_empty_world.launch  aurobot_kinect_empty_world.launch  aurobot_plus_empty_world.launch
aurobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aurobot_plus_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aurobot_right_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aurobot_right_robotiq_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aurobot_right_shadow_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aurobot_utils/: CMakeLists.txt  package.xml  planning.cpp
aurobot_utils/barrett_joint_amp/: .~lock.relationship1.ods#  relationship1.csv  relationship1.ods
aurobot_utils/hand_joint_amp/: relationship_allegro.csv  relationship_allegro.ods  relationship_allegro.txt  relationship_barrett.ods  relationship_barrett.txt  relationship_shadow.csv  relationship_shadow.ods  relationship_shadow.txt
aurobot_utils/msg/: GraspConfiguration.msg  SceneObjects.msg
aurobot_utils/src/: allegro_amp_aprox.cpp  allegro_control_grasp.cpp  allegro_plan_grasp.cpp  aurobot_execute_grasp.cpp  aurobot_move_left_allegro.cpp  aurobot_move_left_odr_axs_pa10.cpp  aurobot_move_left_pa10.cpp  aurobot_move_right_odr_vel_pa10.cpp  aurobot_plan.cpp  aurobot_plan_grasp.cpp  barrett_plan_grasp.cpp  grasp_objects.cpp  move_left_allegro.cpp  move_left_odr_axs_pa10.cpp  move_right_odr_vel_pa10.cpp  move_right_pa10.cpp  move_right_shadow.cpp  pointcloud_listener.cpp  realsense_to_world.cpp  shadow_amp_aprox.cpp  shadow_plan_grasp.cpp  testing_control.cpp  testing_control_pub.cpp
aurobot_utils/unused/: barrett_amp_aprox.cpp  barrett_plan_grasp.cpp  move_left_pa10.cpp  move_right_odr_vel_pa10.cpp  planning.cpp  shadow_amp_aprox.cpp  shadow_tests.cpp
moveit_ikfast_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh  (+1 more)
(+111 files in other folders)
